testdata/test/resources/com/yafred/asn1/test/should-fail/sequence_no_tag_allowed_in_extension.asn
-- FAILS: no tag allowed in extension

Sequence DEFINITIONS AUTOMATIC TAGS ::= BEGIN

Root ::= SEQUENCE {
un BOOLEAN,
deux BOOLEAN,

...,
trois [4] BOOLEAN,
quatre [3] BOOLEAN
}


END